k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-web-app
spec:
  type: NodePort
  selector:
    app: flask-web-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007
